--- a/clynicalsafe/website/templates/Doctors.html
+++ b/clynicalsafe/website/templates/Doctors.html
@@ -94,10 +94,11 @@
                                         <li><a class="active" href="index.html">Inicio</a></li>
                                         <li><a href="#">Paginas <i class="ti-angle-down"></i></a>
                                             <ul class="submenu">
-                                                <li><a href="history.html">Historias</a></li>
+                                                <li><a href="history.html">Crear Historia Clinica</a></li>
+                                                <li><a href="citas.html">Citas</a></li>
+
                                             </ul>
                                         </li>
-                                        <li><a href="Doctors.html">Doctores</a></li>
                                         <li><a href="contact.html">Contactanos</a></li>
                                     </ul>
                                 </nav>
