--- a/clynicalsafe/website/templates/historias.html
+++ b/clynicalsafe/website/templates/historias.html
@@ -97,7 +97,9 @@
                                     </nav>
                                 </div>
                             </div>
-                            
+                            <div class="col-12">
+                                <div class="mobile_menu d-block d-lg-none"></div>
+                            </div>
                         </div>
                     </div>
                 </div>
@@ -114,32 +116,38 @@
             <div class="row">
                 <div class="col-xl-6 col-lg-6">
                     <div class="welcome_docmed_info">
-                        <h2>Welcome to Docmed</h2>
-                        <div class="content-middle">
-                            <h1>
-                                Iniciar sesi&oacute;n
-                            </h1>
-                            {% if error %}
-                            <p>
-                                Nombre de usuario o contrase&ntilde;a incorrecto, intente de nuevo
-                            </p>
-                            {% endif %}
-                            <form action="" method="POST">
-                                {% csrf_token %}
-                                <div class="form-content">
-                                        <label>Usuario * </label>
-                                        <input type="text" name="username" required>
+                        <h2>Historia Clinica</h2>
+                        {% for p in lista_historias%}
+                        <div  class="card">
+                            <div class="info">
+                                <p class="name">Nombre: {{p.nombre}}</p>
+                                <p class="precio">Primer Apellido: {{p.apellido1}}</p>
+                                <p class="precio">Segundo Apellido: {{p.apellido2}}</p>
+                                <p class="precio">Genero: {{p.sexo}}</p>
+                                <p class="precio">Edad: {{p.edad}}</p>
+                                <p class="precio">Celular paciente: {{p.celular}}</p>
+                                <p class="precio">Correo: {{p.correo}}</p>
+                                <p class="precio">Ciudad {{p.ciudad}}</p>
+                                <p class="precio">Direccion: {{p.direccion}}</p>
+                                <p class="precio">Observaciones {{p.Observaciones}}</p>
+                                <p class="precio">RH: {{p.rh}}</p>
+                                <p class="precio">EPS: {{p.eps}}</p>
+                                <p class="precio">Enfermedades: {{p.enfermedades}}</p>
+                                <p class="precio">alergias: {{p.alergias}}</p>
+                                <p class="precio">Alergias a Medicamentos: {{p.alergiasMedicamentos}}</p>
 
-                                        <label>Contrase&ntilde;a *</label>
-                                        <input type="password" name="password" required>
-                                    
-                                   <input type="submit" class="button " value="Iniciar">
-                                   <a href="{% url "register" %}" style="font-size: 16px">¿No tienes cuenta? Registrate aqu&iacute;</a>
-                
-                                </div>
-                            </form>
+
+
+
+
+                                
+
+                            </div>
                         </div>
-                    </div>
+      
+    {% endfor%}
+
+                       </div>
                 </div>
                     </div>
                 </div>
@@ -178,94 +186,155 @@
         </div>
     </div>
     <!-- Emergency_contact end -->
+
 <!-- footer start -->
-<footer class="footer">
-    <div class="footer_top">
-        <div class="container">
-            <div class="row">
-                <div class="col-xl-4 col-md-6 col-lg-4">
-                    <div class="footer_widget">
-                        <div class="footer_logo">
-                            <a href="#">
-                                <img src="{% static 'website/img/footer_logo.png' %}" alt="">
-                            </a>
-                        </div>
-                        <div class="socail_links">
-                            <ul>
-                                <li>
+    <footer class="footer">
+            <div class="footer_top">
+                <div class="container">
+                    <div class="row">
+                        <div class="col-xl-4 col-md-6 col-lg-4">
+                            <div class="footer_widget">
+                                <div class="footer_logo">
                                     <a href="#">
-                                        <i class="ti-facebook"></i>
+                                        <img src="{% static 'website/img/footer_logo.png' %}" alt="">
                                     </a>
-                                </li>
-                                <li>
-                                    <a href="#">
-                                        <i class="ti-twitter-alt"></i>
-                                    </a>
-                                </li>
-                                <li>
-                                    <a href="#">
-                                        <i class="fa fa-instagram"></i>
-                                    </a>
-                                </li>
-                            </ul>
-                        </div>
-
-                    </div>
-                </div>
-                <div class="col-xl-2 offset-xl-1 col-md-6 col-lg-3">
-                    <div class="footer_widget">
-                        <h3 class="footer_title">
-                                Departamentos
-                        </h3>
-                        <ul>
-                            <li><a href="#">Oftalmologo</a></li>
-                            <li><a href="#">Dermatologia</a></li>
-                            <li><a href="#">Patologia
-                            </a></li>
-                            <li><a href="#">Medicos Generales</a></li>
-                            <li><a href="#">Odontologos</a></li>
-                        </ul>
-
-                    </div>
-                </div>
-        
-                <div class="col-xl-3 col-md-6 col-lg-3">
-                    <div class="footer_widget">
-                        <h3 class="footer_title">
-                                Direccion
-                        </h3>
-                        <p>
-                            Carrera80#22-103<br>
-                            +10 367 467 8934 <br>
-                            clynicalsafe@gmail  .com
-                        </p>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </div>
-    <div class="copy-right_text">
-        <div class="container">
-            <div class="footer_border"></div>
-            <div class="row">
-                <div class="col-xl-12">
-                    <p class="copy_right text-center">
-                        <!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
-
-
-
-
-Copyright &copy;<script>document.write(new Date().getFullYear());</script> Todos los derechos reservados
-                    </p>
-                </div>
-            </div>
-        </div>
-    </div>
-</footer>
-<!-- footer end  -->
-<!-- link that opens popup -->
-
+                                </div>
+                                <p>
+                                        Firmament morning sixth subdue darkness 
+                                        creeping gathered divide.
+                                </p>
+                                <div class="socail_links">
+                                    <ul>
+                                        <li>
+                                            <a href="#">
+                                                <i class="ti-facebook"></i>
+                                            </a>
+                                        </li>
+                                        <li>
+                                            <a href="#">
+                                                <i class="ti-twitter-alt"></i>
+                                            </a>
+                                        </li>
+                                        <li>
+                                            <a href="#">
+                                                <i class="fa fa-instagram"></i>
+                                            </a>
+                                        </li>
+                                    </ul>
+                                </div>
     
+                            </div>
+                        </div>
+                        <div class="col-xl-2 offset-xl-1 col-md-6 col-lg-3">
+                            <div class="footer_widget">
+                                <h3 class="footer_title">
+                                        Departments
+                                </h3>
+                                <ul>
+                                    <li><a href="#">Eye Care</a></li>
+                                    <li><a href="#">Skin Care</a></li>
+                                    <li><a href="#">Pathology</a></li>
+                                    <li><a href="#">Medicine</a></li>
+                                    <li><a href="#">Dental</a></li>
+                                </ul>
+    
+                            </div>
+                        </div>
+                        <div class="col-xl-2 col-md-6 col-lg-2">
+                            <div class="footer_widget">
+                                <h3 class="footer_title">
+                                        Useful Links
+                                </h3>
+                                <ul>
+                                    <li><a href="#">About</a></li>
+                                    <li><a href="#">Blog</a></li>
+                                    <li><a href="#">About</a></li>
+                                    <li><a href="#"> Contact</a></li>
+                                    <li><a href="#"> Appointment</a></li>
+                                </ul>
+                            </div>
+                        </div>
+                        <div class="col-xl-3 col-md-6 col-lg-3">
+                            <div class="footer_widget">
+                                <h3 class="footer_title">
+                                        Address
+                                </h3>
+                                <p>
+                                    200, D-block, Green lane USA <br>
+                                    +10 367 467 8934 <br>
+                                    docmed@contact.com
+                                </p>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="copy-right_text">
+                <div class="container">
+                    <div class="footer_border"></div>
+                    <div class="row">
+                        <div class="col-xl-12">
+                            <p class="copy_right text-center">
+                                <!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
+Copyright &copy;<script>document.write(new Date().getFullYear());</script> All rights reserved | This template is made with <i class="fa fa-heart-o" aria-hidden="true"></i> by <a href="https://colorlib.com" target="_blank">Colorlib</a>
+<!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
+                            </p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </footer>
+<!-- footer end  -->
+    <!-- link that opens popup -->
+
+    <!-- form itself end-->
+    <form id="test-form" class="white-popup-block mfp-hide">
+        <div class="popup_box ">
+            <div class="popup_inner">
+                <h3>Make an Appointment</h3>
+                <form action="#">
+                    <div class="row">
+                        <div class="col-xl-6">
+                            <input id="datepicker" placeholder="Pick date">
+                        </div>
+                        <div class="col-xl-6">
+                            <input id="datepicker2" placeholder="Suitable time">
+                        </div>
+                        <div class="col-xl-6">
+                            <select class="form-select wide" id="default-select" class="">
+                                <option data-display="Select Department">Department</option>
+                                <option value="1">Eye Care</option>
+                                <option value="2">Physical Therapy</option>
+                                <option value="3">Dental Care</option>
+                            </select>
+                        </div>
+                        <div class="col-xl-6">
+                            <select class="form-select wide" id="default-select" class="">
+                                <option data-display="Doctors">Doctors</option>
+                                <option value="1">Mirazul Alom</option>
+                                <option value="2">Monzul Alom</option>
+                                <option value="3">Azizul Isalm</option>
+                            </select>
+                        </div>
+                        <div class="col-xl-6">
+                            <input type="text"  placeholder="Name">
+                        </div>
+                        <div class="col-xl-6">
+                            <input type="text"  placeholder="Phone no.">
+                        </div>
+                        <div class="col-xl-12">
+                            <input type="email"  placeholder="Email">
+                        </div>
+                        <div class="col-xl-12">
+                            <button type="submit" class="boxed-btn3">Confirm</button>
+                        </div>
+                    </div>
+                </form>
+            </div>
+        </div>
+    </form>
+    <!-- form itself end -->
+
     <!-- JS here -->
     <script src="{% static 'website/js/vendor/modernizr-3.5.0.min.js' %}"></script>
     <script src="{% static 'website/js/vendor/jquery-1.12.4.min.js' %}"></script>
